k8s-ingress-nginx/overlays/path-based/ingress.yaml
# https://kubernetes.io/docs/concepts/services-networking/ingress/#name-based-virtual-hosting
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: test-ingress
  labels:
    app: test
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: \"false\"
spec:
  rules:
  - host: foo.bar.com
    http:
      paths:
      - path: /foo
        backend:
          serviceName: service1
          servicePort: 80
      - path: /bar
        backend:
          serviceName: service1
          servicePort: 80
